# OrchestralScope

./: README.md  requirements.txt
OrchestralScope/: README.md  pyproject.toml
OrchestralScope/timbre-sequence-analyze/: test_gui_fix.py  test_sequence_analyze.py
OrchestralScope/timbre-sequence-analyze/timbre_sequence_analyze/: analysis.py  io.py  viz.py
OrchestralScope/timbre_analyze/: cli.py  clustering.py  io.py  utils.py  viz.py
OrchestralScope/timbre_analyze.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
timbre-sequence-analyze/: README.md  pyproject.toml
timbre-sequence-analyze/timbre_sequence_analyze/: __init__.py  audio.py  cli.py  similarity_only.py  utils.py
timbre_analyze/: __init__.py  audio.py  complexity.py  embedding.py  features.py  metrics.py  palette.py  segmentation.py  smoothing.py
timbre_analyze.egg-info/: requires.txt  top_level.txt
