[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timbre-analyze"
version = "0.1.0"
description = "Audio timbre segmentation, clustering, and visualization CLI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{ name = "Outora" }]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "librosa>=0.10.1",
  "soundfile>=0.12",
  "scikit-learn>=1.3",
  "hmmlearn>=0.3.0",
  "umap-learn>=0.5.5",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "tqdm>=4.66",
  "numba>=0.58",
]

[project.scripts]
timbre-analyze = "timbre_analyze.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["timbre_analyze*"]


