[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timbre-sequence-analyze"
version = "0.1.0"
description = "Timbre sequence analysis with fixed 0.5s segmentation and multi-feature fusion"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{ name = "Outora" }]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "librosa>=0.10.1",
  "soundfile>=0.12",
  "scikit-learn>=1.3",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "tqdm>=4.66",
]

[project.scripts]
timbre-sequence-analyze = "timbre_sequence_analyze.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["timbre_sequence_analyze*"]

